--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -106,17 +106,8 @@
     {{end}}
   {{end}}
 
-  {{with .Site.Params.googleAnalyticsUserID }}
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', '{{.}}', 'auto');
-    ga('send', 'pageview');
-
-  </script>
+  {{with .Site.Params.volument.siteID }}
+  <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('{{.}}')"></script>
   {{end}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"></script>
 </head>
