--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -106,8 +106,10 @@
     {{end}}
   {{end}}
 
-  {{with .Site.Params.volument.siteID }}
-  <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('{{.}}')"></script>
+  {{ if not .Site.IsServer }}
+    {{with .Site.Params.volument.siteID }}
+    <script async src="https://cdn.volument.com/v1/volument.js" onload="volument('{{.}}')"></script>
+    {{end}}
   {{end}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"></script>
 </head>
