--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -95,10 +95,16 @@
     <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
   {{ end }}
 
-  {{ if .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-  {{ end }}
+  {{ if .Site.Params.RelPermalink}}
+  <link href="{{ with .OutputFormats.Get "RSS" }} {{ .RelPermalink  }} {{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  {{else}}
+    {{ if ne .Permalink "/" }}
+        <link href="{{ "index.xml" | relURL}}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+    {{ end }}
+    {{if .IsNode}}
+    <link href="{{ with .OutputFormats.Get "RSS" }} {{ .RelPermalink }} {{ end }}" rel="alternate" type="application/rss+xml" title="{{ if ne .RelPermalink "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
+    {{end}}
+  {{end}}
 
   {{ if not .Site.IsServer }}
     {{with .Site.Params.volument.siteID }}
